rehearsal/stages/H7/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hitokoto
spec:
  parentRefs:
    - name: hitokoto-gateway
  rules:
    - matches:                 # /web で始まるパスは nginx へ
        - path:
            type: PathPrefix
            value: /web
      filters:
        - type: URLRewrite     # nginx には / として渡す
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: web
          port: 80
    - matches:                 # それ以外は掲示板へ
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hitokoto
          port: 80
